--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,13 @@
 NEXT_PUBLIC_SERVER_URL=http://localhost:3000
 
 # Any value works here, should be somewhat secure
-PAYLOAD_SECRET=
+PAYLOAD_SECRET=payload-secret
 
 # Database - either MongoDB or Postgres work
-MONGODB_URL=
-
+MONGODB_URL=ffdsfsdfsdf
 # Payments
 STRIPE_SECRET_KEY=
-STRIPE_WEBHOOK_SECRET=
+STRIPE_WEBHOOK_SECRET=sadAS
 
 # Email
-RESEND_API_KEY=
+RESEND_API_KEY=safsfasfasf
